--- a/src/components/variebles.scss
+++ b/src/components/variebles.scss
@@ -5,6 +5,9 @@ $color-crema: #fce4ec;
 $color-morado: #330099;
 $color-principal: #1a1a32;
 $color-secundario: #0a7079;
+// $color-secundario: #00622e;
+// $color-principal: #2e0062;
+
 
 * {
   margin: 0;
