--- a/src/App.scss
+++ b/src/App.scss
@@ -12,3 +12,20 @@
 .aplicacion {
   background-color: $color-principal;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: $color-principal;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $color-secundario;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
